--- a/index.qmd
+++ b/index.qmd
@@ -2,14 +2,19 @@
 title: "Foundations of Data-Driven Decision-Making and Statistical Thinking"
 ---
 
-This is a Quarto website. Say something about FD3M.
+## Welcome!
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+This is the course website for the Fall 2025 iteration of Math 300Z/356Z/377Z, Foundations of Data-Driven Decision-Making and Statistical Thinking, or FD3M for short.
 
-```{r}
-1 + 1
-```
+![](images/logo.PNG){fig-align="center"}
 
-This is a link to the [About](about.qmd) page.
+We've created this website to hold important course information including the course schedule, reading assignments and other graded events, and information for the semester-long project. This information will also be posted to the course Teams page, but we hope this will serve as an easy-to-access hub for this course.
 
-This is a link to a specific [section](about.qmd#new-section) in the About page.
+### Links
+
+You can find the course letter/course materials on the [About this course](about.qmd) page.
+
+You can find the course schedule with daily reading assignments and other graded events on the [Course schedule](schedule.qmd) page.
+
+You can find information about the semester-long project on the [Course project](course_project.qmd) page.
+
