--- a/schedule.qmd
+++ b/schedule.qmd
@@ -1,5 +1,79 @@
 ---
-title: "Reading Assignments"
+title: "Course Schedule"
 ---
 
-This page includes all the reading assignments and lesson schedule.
+This page includes schedule for the Fall 2025 semester, along with all the assigned readings and graded events.
+
+*OpenIntro Statistics* and *Introduction to Modern Statistics* are both available as a free e-book. They can be downloaded from the links in the course letter, or they can be found in the course Teams page.
+
+## Block 1: Probability Models
+
++--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| Lesson | Topic                                | BEFORE Class                                                                                                                                                                                                                     | AFTER Class | Graded Events (due dates)                                                                 |
++========+======================================+==================================================================================================================================================================================================================================+=============+===========================================================================================+
+| 1      | Intro to Generative AI               |                                                                                                                                                                                                                                  | -   GPset 1 |                                                                                           |
++--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 2      | Intro to Probability                 | -   READ: Section 3.1 Defining Probability, *OpenIntro Statistics*                                                                                                                                                               | -   GPset 2 | -   Strengths Activity                                                                    |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 2](https://notebooklm.google.com/notebook/3233b224-a086-4aeb-8bb5-1412444f7ee9){target="_blank"}                                                                                                   |             |                                                                                           |
++--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 3      | Conditional Probability, Bayes' Rule | -   READ: Section 3.2 Conditional Probability, *OpenIntro Statistics*                                                                                                                                                            | -   GPset 3 | -   [Project Group Form](https://forms.office.com/r/W2MMh9jDyV){target="_blank"}          |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 3](https://notebooklm.google.com/notebook/06a6c546-6916-40cb-a710-a469f0842121){target="_blank"}                                                                                                   |             |                                                                                           |
++--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 4      | Discrete Random Variables            | -   READ:                                                                                                                                                                                                                        | -   GPset 4 | -   HW 1                                                                                  |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      |     -   Section 10.2 Random variables (Intro through 10.2.4), [*Computational Probability and Statistics*](https://ds-usafa.github.io/Quarto-Book/Discrete-Random-Variables.html){target="_blank"}                               |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      |     -   Section 3.4 (Intro through 3.4.2) Random Variables, *OpenIntro Statistics*                                                                                                                                               |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 4](https://notebooklm.google.com/notebook/08abf03d-1d2d-4f78-9447-7c1d115dbf69){target="_blank"}                                                                                                   |             |                                                                                           |
++--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 5      | Continuous Random Variables          | -   READ:                                                                                                                                                                                                                        | -   GPset 5 | -   [Pre-course AI questionnaire](https://forms.office.com/r/eCQCP9BLFa){target="_blank"} |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      |     -   Section 11.2 Continuous random variables (Intro through 11.2.2) and 11.3 Moments, [*Computational Probability and Statistics*](https://ds-usafa.github.io/Quarto-Book/Continuous-Random-Variables.html){target="_blank"} |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      |     -   Section 3.5 Continuous distributions, *OpenIntro Statistics*                                                                                                                                                             |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 5](https://notebooklm.google.com/notebook/c18d08c7-f192-4790-96ec-fd32137e30e8){target="_blank"}                                                                                                   |             |                                                                                           |
++--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 6      | Named Distributions                  | -   READ: Section ..., *OpenIntro Statistics*                                                                                                                                                                                    | -   GPset 6 | -   Project Individual Task #1                                                            |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      | -   Reading Guide for Lesson 6                                                                                                                                                                                                   |             |                                                                                           |
++--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 7      | Normal Distribution                  | -   READ: Section ..., *OpenIntro Statistics*                                                                                                                                                                                    | -   GPset 7 | -   HW 2                                                                                  |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      | -   Reading Guide for Lesson 7                                                                                                                                                                                                   |             |                                                                                           |
++--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+
+## Block 2: Data Wrangling and Visualization
+
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| Lesson | Topic                                   | BEFORE Class                        | AFTER Class | Graded Events (due dates)      |
++========+=========================================+=====================================+=============+================================+
+| 8      | Data Provenance / History of Statistics |                                     | -   GPset 1 |                                |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 9      | GR1                                     | Study! Practice!                    |             |                                |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 10     | Data Basics                             |                                     |             |                                |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 11     | Data Collection and Studies             |                                     |             | -   Project Group Task #1      |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 12     | Tidy Data                               |                                     |             |                                |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 13     | Data Wrangling                          |                                     |             |                                |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 14     | Numerical Summaries                     |                                     |             | -   HW 3                       |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 15     | Data Visualization in 2D                |                                     |             |                                |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 16     | Data Visualization in 1D                |                                     |             | -   Project Individual Task #2 |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 17     | Centrality and Spread                   |                                     |             |                                |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+| 18     | GR2                                     | Study! Practice!                    |             |                                |
++--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
+
+## Block 3: Inference
+
+## Block 4: Linear Regression
