--- a/schedule.qmd
+++ b/schedule.qmd
@@ -37,42 +37,42 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
 |        |                                      | -   [Reading Guide for Lesson 5](https://notebooklm.google.com/notebook/c18d08c7-f192-4790-96ec-fd32137e30e8){target="_blank"}                                                                                                   |             |                                                                                           |
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 6      | Named Distributions                  | -   READ: Section ..., *OpenIntro Statistics*                                                                                                                                                                                    | -   GPset 6 | -   Project Individual Task #1                                                            |
+| 6      | Named Distributions                  | -   READ: Sections 4.2 Geometric distribution, 4.3 Binomial distribution (through 4.3.1), and 4.5 Poisson distribution, *OpenIntro Statistics*                                                                                   | -   GPset 6 | -   Project Individual Task #1                                                            |
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
 |        |                                      | -   Reading Guide for Lesson 6                                                                                                                                                                                                   |             |                                                                                           |
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 7      | Normal Distribution                  | -   READ: Section ..., *OpenIntro Statistics*                                                                                                                                                                                    | -   GPset 7 | -   HW 2                                                                                  |
+| 7      | Normal Distribution                  | -   READ: Section 4.1 Normal Distribution, *OpenIntro Statistics*                                                                                                                                                                | -   GPset 7 | -   HW 2                                                                                  |
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
 |        |                                      | -   Reading Guide for Lesson 7                                                                                                                                                                                                   |             |                                                                                           |
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
 
 ## Block 2: Data Wrangling and Visualization
 
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| Lesson | Topic                                   | BEFORE Class                        | AFTER Class | Graded Events (due dates)      |
-+========+=========================================+=====================================+=============+================================+
-| 8      | Data Provenance / History of Statistics |                                     | -   GPset 1 |                                |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 9      | GR1                                     | Study! Practice!                    |             |                                |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 10     | Data Basics                             |                                     |             |                                |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 11     | Data Collection and Studies             |                                     |             | -   Project Group Task #1      |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 12     | Tidy Data                               |                                     |             |                                |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 13     | Data Wrangling                          |                                     |             |                                |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 14     | Numerical Summaries                     |                                     |             | -   HW 3                       |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 15     | Data Visualization in 2D                |                                     |             |                                |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 16     | Data Visualization in 1D                |                                     |             | -   Project Individual Task #2 |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 17     | Centrality and Spread                   |                                     |             |                                |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
-| 18     | GR2                                     | Study! Practice!                    |             |                                |
-+--------+-----------------------------------------+-------------------------------------+-------------+--------------------------------+
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| Lesson | Topic                                   | BEFORE Class                     | AFTER Class | Graded Events (due dates)      |
++========+=========================================+==================================+=============+================================+
+| 8      | Data Provenance / History of Statistics |                                  | -   GPset 8 |                                |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 9      | GR1                                     | Study! Practice!                 | Relax!      |                                |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 10     | Data Basics                             |                                  |             |                                |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 11     | Data Collection and Studies             |                                  |             | -   Project Group Task #1      |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 12     | Tidy Data                               |                                  |             |                                |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 13     | Data Wrangling                          |                                  |             |                                |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 14     | Numerical Summaries                     |                                  |             | -   HW 3                       |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 15     | Data Visualization in 2D                |                                  |             |                                |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 16     | Data Visualization in 1D                |                                  |             | -   Project Individual Task #2 |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 17     | Centrality and Spread                   |                                  |             |                                |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
+| 18     | GR2                                     | Study! Practice!                 |             |                                |
++--------+-----------------------------------------+----------------------------------+-------------+--------------------------------+
 
 ## Block 3: Inference
 
