--- a/schedule.qmd
+++ b/schedule.qmd
@@ -43,36 +43,36 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
 | 7      | Normal Distribution                  | -   READ: Section 4.1 Normal Distribution, *OpenIntro Statistics*                                                                                                                                                                | -   GPset 7 | -   HW 2                                                                                  |
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      | -   Reading Guide for Lesson 7                                                                                                                                                                                                   |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 7](https://notebooklm.google.com/notebook/3e74f22c-0af6-4afe-b5e7-d771b0a01990)                                                                                                                    |             |                                                                                           |
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
 
 ## Block 2: Data Wrangling and Visualization
 
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| Lesson     | Topic                                   | BEFORE Class     | AFTER Class | Graded Events (due dates)      |
-+============+=========================================+==================+=============+================================+
-| 8          | Data Provenance / History of Statistics |                  | -   GPset 8 |                                |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 9          | GR1                                     | Study! Practice! | Relax!      |                                |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 10         | Data Basics                             |                  |             |                                |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 11         | Data Collection and Studies             |                  |             | -   Project Group Task #1      |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 12         | Tidy Data                               |                  |             |                                |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 13         | Data Wrangling                          |                  |             |                                |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 14         | Numerical Summaries                     |                  |             | -   HW 3                       |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 15         | Data Visualization in 2D                |                  |             |                                |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 16         | Data Visualization in 1D                |                  |             | -   Project Individual Task #2 |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 17         | Centrality and Spread                   |                  |             |                                |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 18         | GR2                                     | Study! Practice! |             |                                |
-+------------+-----------------------------------------+------------------+-------------+--------------------------------+
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| Lesson    | Topic                                   | BEFORE Class     | AFTER Class | Graded Events (due dates)      |
++===========+=========================================+==================+=============+================================+
+| 8         | Data Provenance / History of Statistics |                  | -   GPset 8 |                                |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 9         | GR1                                     | Study! Practice! | Relax!      |                                |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 10        | Data Basics                             |                  |             |                                |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 11        | Data Collection and Studies             |                  |             | -   Project Group Task #1      |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 12        | Tidy Data                               |                  |             |                                |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 13        | Data Wrangling                          |                  |             |                                |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 14        | Numerical Summaries                     |                  |             | -   HW 3                       |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 15        | Data Visualization in 2D                |                  |             |                                |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 16        | Data Visualization in 1D                |                  |             | -   Project Individual Task #2 |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 17        | Centrality and Spread                   |                  |             |                                |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
+| 18        | GR2                                     | Study! Practice! |             |                                |
++-----------+-----------------------------------------+------------------+-------------+--------------------------------+
 
 ## Block 3: Inference
 
