--- a/schedule.qmd
+++ b/schedule.qmd
@@ -41,38 +41,48 @@ This page includes schedule for the Fall 2025 semester, along with all the assig
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
 |        |                                      | -   [Reading Guide for Lesson 6](https://notebooklm.google.com/notebook/5aeb5c88-de9a-435b-b93f-4d3a6481e74c)                                                                                                                    |             |                                                                                           |
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 7      | Normal Distribution                  | -   READ: Section 4.1 Normal Distribution, *OpenIntro Statistics*                                                                                                                                                                | -   GPset 7 | -   HW 2                                                                                  |
+| 7      | Normal Distribution                  | -   READ:                                                                                                                                                                                                                        | -   GPset 7 | -   HW 2                                                                                  |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      |     -   Section 4.1 Normal Distribution, *OpenIntro Statistics*                                                                                                                                                                  |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
+|        |                                      |     -   [Section 13.2.2 Exponential distribution](https://ds-usafa.github.io/Quarto-Book/Named-Continuous-Distributions.html#exponential-distribution){target="_blank"} from *Computational Probability and Statistics*          |             |                                                                                           |
 |        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
 |        |                                      | -   [Reading Guide for Lesson 7](https://notebooklm.google.com/notebook/3e74f22c-0af6-4afe-b5e7-d771b0a01990)                                                                                                                    |             |                                                                                           |
 +--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
 
 ## Block 2: Data Wrangling and Visualization
 
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| Lesson    | Topic                                   | BEFORE Class     | AFTER Class | Graded Events (due dates)      |
-+===========+=========================================+==================+=============+================================+
-| 8         | Data Provenance / History of Statistics |                  | -   GPset 8 |                                |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 9         | GR1                                     | Study! Practice! | Relax!      |                                |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 10        | Data Basics                             |                  |             |                                |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 11        | Data Collection and Studies             |                  |             | -   Project Group Task #1      |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 12        | Tidy Data                               |                  |             |                                |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 13        | Data Wrangling                          |                  |             |                                |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 14        | Numerical Summaries                     |                  |             | -   HW 3                       |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 15        | Data Visualization in 2D                |                  |             |                                |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 16        | Data Visualization in 1D                |                  |             | -   Project Individual Task #2 |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 17        | Centrality and Spread                   |                  |             |                                |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
-| 18        | GR2                                     | Study! Practice! |             |                                |
-+-----------+-----------------------------------------+------------------+-------------+--------------------------------+
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| Lesson | Topic                       | BEFORE Class                                                                                                                   | AFTER Class | Graded Events (due dates)      |
++========+=============================+================================================================================================================================+=============+================================+
+| 8      | Data Basics                 | -   READ:                                                                                                                      | -   GPset 8 |                                |
+|        |                             |                                                                                                                                |             |                                |
+|        |                             |     -   Chapter 1 Hello data from *Introduction to Modern Stats* *(2e)*                                                        |             |                                |
+|        |                             |                                                                                                                                |             |                                |
+|        |                             |     -   Chapter 5 Exploring numerical data from *Introduction to Modern Stats* *(2e)*                                          |             |                                |
+|        |                             |                                                                                                                                |             |                                |
+|        |                             | -   [Reading Guide for Lesson 8](https://notebooklm.google.com/notebook/6f92eaad-f39d-44fa-802a-fc4496e533ea){target="_blank"} |             |                                |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 9      | GR1                         | Study! Practice!                                                                                                               | Relax!      |                                |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 10     | Data Basics                 |                                                                                                                                |             |                                |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 11     | Data Collection and Studies |                                                                                                                                |             | -   Project Group Task #1      |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 12     | Tidy Data                   |                                                                                                                                |             |                                |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 13     | Data Wrangling              |                                                                                                                                |             |                                |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 14     | Numerical Summaries         |                                                                                                                                |             | -   HW 3                       |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 15     | Data Visualization in 2D    |                                                                                                                                |             |                                |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 16     | Data Visualization in 1D    |                                                                                                                                |             | -   Project Individual Task #2 |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 17     | Centrality and Spread       |                                                                                                                                |             |                                |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
+| 18     | GR2                         | Study! Practice!                                                                                                               |             |                                |
++--------+-----------------------------+--------------------------------------------------------------------------------------------------------------------------------+-------------+--------------------------------+
 
 ## Block 3: Inference
 
